Added unfinished readme

--- a/src/HorribleSubsRenamer/Properties/launchSettings.json
+++ b/src/HorribleSubsRenamer/Properties/launchSettings.json
@@ -1,8 +1,7 @@
 {
   "profiles": {
     "HorribleSubsRenamer": {
-      "commandName": "Project",
-      "commandLineArgs": "--dir \"F:\\test\" --extensions mkv mp4"
+      "commandName": "Project"
     }
   }
 }
