Removed usage of paralell foreach

--- a/src/HorribleSubsRenamer/Properties/launchSettings.json
+++ b/src/HorribleSubsRenamer/Properties/launchSettings.json
@@ -1,7 +1,8 @@
 {
   "profiles": {
     "HorribleSubsRenamer": {
-      "commandName": "Project"
+      "commandName": "Project",
+      "commandLineArgs": "--source \"F:\\media-rename\" --old-value \"re\" --new-value \"\" --season \"3\" --create-subfolders \"false\""
     }
   }
 }
